Change error implementation

--- a/app/src/main/res/values-b+es/strings.xml
+++ b/app/src/main/res/values-b+es/strings.xml
@@ -5,4 +5,6 @@
     <string name="cases_confirmed">Casos confirmados: %1$,d</string>
     <string name="deaths_confirmed">Muertes confirmadas: %1$,d</string>
     <string name="error">Hubo un error. Vuelve a intentarlo</string>
+    <string name="error_500">Error en el serrvidor</string>
+    <string name="error_401">No está autorizado</string>
 </resources>
