--- a/app/src/main/res/values-b+es/strings.xml
+++ b/app/src/main/res/values-b+es/strings.xml
@@ -7,4 +7,5 @@
     <string name="error">Hubo un error. Vuelve a intentarlo</string>
     <string name="error_500">Error en el serrvidor</string>
     <string name="error_401">No está autorizado</string>
+    <string name="network_error">There is a problem with the netwrok</string>
 </resources>
