--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="error">There was an error. Please try again</string>
     <string name="error_500">Internal server error</string>
     <string name="error_401">Unauthorized</string>
+    <string name="network_error">Ha ocurrido un problema con la red</string>
 </resources>
