--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="error">There was an error. Please try again</string>
     <string name="error_500">Internal server error</string>
     <string name="error_401">Unauthorized</string>
-    <string name="network_error">Ha ocurrido un problema con la red</string>
+    <string name="network_error">There is a problem with the netwrok</string>
+    <string name="empty_data">No data to display</string>
 </resources>
